--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/d471061c/naturaldeduction#readme",
   "dependencies": {
     "http-server": "^0.12.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
